# PINN_CLT

./: .gitignore  README.md  checkpoint.py  data.py  early_stopping.py  losses.py  model.py  plotting.py  pyproject.toml  train.py  video.py
tests/: test_checkpoint.py  test_data.py  test_early_stopping.py  test_losses.py  test_model.py  test_train.py
