[project]
name = "pinn-clt"
version = "0.1.0"
description = "Physics-Informed Neural Network for Classical Lamination Theory (orthotropic plate bending)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "matplotlib>=3.10.9",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "simple-parsing>=0.1.8",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "wandb>=0.26.1",
]
